002-multiContainerPod.yml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container-pod
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
  - name: debian 
    image: debian
    command: ["sleep", "60"]          # This is how we supply the commands to be executed by the container

---

apiVersion: v1
kind: Pod
metadata:
  name: sample-pod
spec:
  containers:
  - name: nginx
    image: nginx

---

apiVersion: v1
kind: Pod
metadata:
  name: http-pod
spec:
  containers:
  - name: httpd
    image: httpd
