008-configMap.yml
apiVersion: v1
kind: Pod
metadata:
  name: print-greeting
spec:
  containers:
  - name: env-print-demo
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: game-pod
spec:
  containers:
    - name: app
      image: docker.io/nginx:latest
