017-quota.yml

apiVersion: v1
kind: Pod
metadata:
  name: debug-001
  namespace: expense
  labels:                      # Labels for the replicaSet
    tier: frontend
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: debug-002
  namespace: expense
  labels:                      # Labels for the replicaSet
    tier: frontend
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
