019-hpa.yml
### HPA : Horizonal Pod Autoscaling

apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app
        image: docker.io/nginx:latest
        ports:
        - containerPort: 80
