awsclipod.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: awscli
  labels:
    app: awscli
spec:
  replicas: 1
  selector:
    matchLabels:
      app: awscli
  template:
    metadata:
      labels:
        app: awscli
    spec:
      containers:
      - name: awscli
        image: docker.io/amazon/aws-cli:latest
        command: ["sleep", "10000"]
