022-networkPolicy.yml
# for network policies to work, you need to ensure that the enableNetworkPolicy: true has to be added on VPC-CNI,refer terraform addOn.tf
apiVersion: v1
kind: Namespace
metadata:
  name: catalogue
---
apiVersion: v1
kind: Namespace
metadata:
  name: payment
---
apiVersion: v1
kind: Pod
metadata:
  name: catalogue
  namespace: catalogue
  labels:
    app: catalogue
spec:
  containers:
    - name: nginx
      image: docker.io/nginx

---
apiVersion: v1
kind: Service
metadata:
  name: catalogue
  namespace: catalogue
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: payment
  namespace: payment
  labels:
    app: payment
spec:
  containers:
    - name: nginx
      image: docker.io/nginx

---
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: payment
  labels:
    app: payment
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80


---
apiVersion: v1
kind: Pod
metadata:
  name: debug
  namespace: default
spec:
  containers:
    - name: debug
      image: nginx:latest
