draft.yml
# for network policies to work, you need to ensure that the enableNetworkPolicy: true has to be added on VPC-CNI,refer terraform addOn.tf
apiVersion: v1
kind: Namespace
metadata:
  name: catalogue
---
apiVersion: v1
kind: Namespace
metadata:
  name: payment
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: catalogue
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: docker.io/nginx
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: payment
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: catalogue
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: payment
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: docker.io/nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: debug
  namespace: default
spec:
  containers:
    - name: debug
      image: nginx:latest

---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: payment
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
    - Ingress
    - Egress
